--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -401,6 +401,11 @@
     height: 250px;
     width: 100%;
   }
+
+  .main {
+    padding: 2rem 1rem;
+    overflow-x: hidden;
+  }
 }
 
 @media (max-width: 380px) {
